--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jetbrains.intellij.deps.winp</groupId>
   <artifactId>winp</artifactId>
-  <version>${revision}${changelist}</version>
+  <version>1.30.1</version>
   <name>winp</name>
   <description>Kill process tree in Windows</description>
   <url>https://github.com/JetBrains/${project.artifactId}</url>
@@ -28,7 +28,7 @@
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
-    <tag>${scmTag}</tag>
+    <tag>winp-1.30.1</tag>
   </scm>
 
   <build>
